
Merging in new backgrounds.
----------------------------------------------------------------------
Tue Mar  2 10:56:20 2004                        Michael Jennings (mej)

New SRPM.
----------------------------------------------------------------------
Wed Mar  3 15:50:17 2004                        Michael Jennings (mej)

Ported over the autogen.sh changes from LibAST and fixed configure.in.
----------------------------------------------------------------------
Thu Mar 11 09:07:13 2004                        Michael Jennings (mej)

Fixed window sizing race condition noted by Virgil <virgil@yak.net>.
----------------------------------------------------------------------
Thu Mar 11 11:55:45 2004                        Michael Jennings (mej)

Fix "make distcheck"
----------------------------------------------------------------------
Mon Apr  5 17:12:06 2004                        Michael Jennings (mej)

Fixed bug in loading print_pipe attribute pointed out by Tom A. Cox
<tomc@hot.rr.com>.
----------------------------------------------------------------------
Tue Apr 20 13:44:22 2004                        Michael Jennings (mej)

As requested by Ben Armstrong <synrg@sanctuary.nslug.ns.ca>, saving
theme settings will not preserve -e/--exec arguments unless a theme
was specifically named by the user.
----------------------------------------------------------------------
Tue Apr 20 15:40:39 2004                        Michael Jennings (mej)

Enable title-reporting and iconname-reporting escape sequences only if
specifically requested by user at compile time.  This exists solely to
protect the ignorant and careless from themselves.
----------------------------------------------------------------------
Mon May 10 18:43:15 2004                        Michael Jennings (mej)

Revert change from February 29th.  I never could reproduce it anyway.
----------------------------------------------------------------------